tests/ui/foreign_use.lex
use grades;

fn main() {
    print("hi");
}
